--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Echoplex</string>
+    <string name="welcome_to_echoplex">Welcome to Echoplex!</string>
+    <string name="welcome_2nd_line">Your hub for effortless and</string>
+    <string name="welcome_3rd_line">effective communication.</string>
+    <string name="btnString1">Get Started</string>
 </resources>
