Designed Signup-UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="welcome_2nd_line">Your hub for effortless and</string>
     <string name="welcome_3rd_line">effective communication.</string>
     <string name="btnString1">Get Started</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
